@@ -68,9 +68,10 @@
       return result + source;
     }
 
-    // For Safari 2, based on work by Dean Edwards
+    // For Safari 2 and Chrome, based on work by Dean Edwards
     // http://code.google.com/p/base2/source/browse/trunk/lib/src/base2-legacy.js?r=239#174
-    if (Bug('STRING_REPLACE_COHERSE_FUNCTION_TO_STRING'))
+    if (Bug('STRING_REPLACE_COHERSE_FUNCTION_TO_STRING') ||
+        Bug('STRING_REPLACE_BUGGY_WITH_GLOBAL_FLAG_AND_EMPTY_PATTERN'))
       this.replace = replace;
   }).call(String.prototype);
 
